--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body {
     font-family: 'Roboto', sans-serif;}
 
 .header {
-    background-color: #1F2937;
+    
     display: flex;
     justify-content: space-between;
     padding: 0 120px;
+    padding-top: 20px;
     align-items: center;
 }
 
@@ -23,4 +24,49 @@ body {
     gap: 10px;
     justify-content: center;
     align-items: center;
+}
+.top-content {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    background-color: #1F2937;
+}
+
+
+
+.top-main {
+    display: flex;
+    padding: 0 120px;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 100px;
+    gap: 20px;
+}
+
+.hero-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 5px 15px;
+    border: 0;
+    border-radius: 8px;
+    align-self: start;
+}
+
+.hero-subtext {
+    font-size: 14px;
+    color: #dfdfdf;
+
+}
+.top-main-left {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    gap: 8px;
 }
