--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;}
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+}
 
 .header {
     
@@ -69,4 +71,45 @@ button {
     flex-direction: column;
     flex-shrink: 0;
     gap: 8px;
+}
+
+
+.mid-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    gap: 60px;
+}
+
+.mid-heading {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.mid-main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 150px;
+}
+
+.item img {
+    border-radius: 10px;
+    border: 1px #3882F6 solid;
+    padding: 30px;
+}
+
+.item {
+    width: 200px;
+}
+
+.text{
+    width: 150px;
+    text-align: center;
+}
+
+.item div{
+    margin: 20px;
 }
