--- a/style.css
+++ b/style.css
@@ -113,3 +113,23 @@ button {
 .item div{
     margin: 20px;
 }
+
+.gray-content {
+    background-color: #E5E7EB;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gray-text {
+    width: 550px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.quoter{
+    font-weight: 900;
+}
